# digit-classifier

./: Cargo.toml
pre_computed/: net.json
src/: activation_fns.rs  functions.rs  main.rs  mnist_loader.rs  network.rs
