[package]
name = "neural_net"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
erased-serde = "0.3.27"
mnist = "0.5.0"
png = "0.17.9"
rand = "0.8.5"
rand_distr = "0.4.3"
serde = { version = "1.0.166", features = ["derive"] }
serde_json = "1.0.100"
